Sitetools-main: Fix trigger-icon alignment
Please cherry-pick to REL1_31

--- a/resources/stylesheets/component/tablet/aside.sitetools-main.panel.less
+++ b/resources/stylesheets/component/tablet/aside.sitetools-main.panel.less
@@ -109,6 +109,7 @@
 					font-style: normal;
 					float: right;
 					width: 40px;
+					margin-right: 0px;
 				}
 			}
 			.trigger.body{
